# SRGAN

./: .gitignore  Pipfile  README.md  config.yaml  pyproject.toml
notebooks/: Make_low_resolution_data.ipynb  inference.ipynb
src/: dataset.py  inference.py  losses.py  model.py  train.py  utils.py
src/utils/: split_dataset.py
